[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/player.gd" id="1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.35
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.35
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.3, 0.5, 0.3, 1)

[sub_resource type="LabelSettings" id="LabelSettings_prompt"]
font_size = 22
font_color = Color(1, 1, 1, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="InteractRay" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -3)

[node name="InteractUI" type="CanvasLayer" parent="."]
layer = 5

[node name="InteractPrompt" type="Label" parent="InteractUI"]
anchors_preset = 7
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
text = ""
label_settings = SubResource("LabelSettings_prompt")
horizontal_alignment = 1
